--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -38,10 +38,16 @@ textarea {
     background-color: rgb(39, 39, 138);
     color: #FFF;
 }
-.button--show-form-to-modify {
+.button--show-form-to-modify, .button--del-geolocation {
     float: right;
 }
 .popup-form {
     position: relative;
     top: 0;
+}
+.map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+    margin: 2em 0 3em 0; 
 }
