--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,10 +1,181 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+body, h1 {
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, sans-serif;
+    font-size: 13px;
+    line-height: 1.3;
+}
+
+.header {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: rgb(26, 26, 68);
+    color: #FFF;
+    box-shadow: inset -3px -3px 10px 0px rgb(76, 99, 134);
+}
+
+h1 {
+    padding: 3em 0 4em 0;
+    font-size: 2.3em;
+    text-transform: uppercase;
+    font-weight: normal;
+    letter-spacing: .2em;
+}
+
+h2 {
+    font-size: 2em;
+    text-align: center;
+    padding: 2em 0 1em 0;
+}
+
+button {
+    margin: .2em 1em .2em 0;
+    padding: .8em 1.4em;
+    border: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: .7em;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    box-shadow: 3px 3px 5px hsl(240, 17%, 45%);
+}
+
+.button--del-geolocation {
+    background-color: #d5b2b2;
+}
+
 .title--main {
     text-align: center;
 }
-.content--main {
-    width: 80%;
-    margin: 0 auto;
+
+.title--main:hover {
+    color: rgb(218, 218, 218);
 }
+
+.content--main {
+    padding: 8em 0;
+    background: #8e9eab;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #eef2f3, #8e9eab);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.content--main>p {
+    text-align: justify;
+    text-indent: 2 em;
+}
+
+.container {
+    width: 60%;
+    margin: 2em auto;
+    text-align: justify;
+    background-color: #FFF;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+}
+
+.container-flex {
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row;
+}
+
+.container--small {
+    height: 6em;
+    width: 8em;
+}
+
+.container--with-padding {
+    padding: 2em;
+}
+
+.font--left {
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.font--position-right {
+    word-spacing: 999999em;
+    border: 4px solid #000;
+    position: relative;
+    top: -3em;
+    left: -1em;
+    width: 5em;
+    padding: 1em;
+    transition: transform 1s;
+}
+
+@media (max-width: 768px) {
+    .font--position-right {
+        border: none;
+        left: .1em;
+        width: 3em;
+        font-size: 1.3em;
+    }
+}
+
+.font--position-right:hover {
+    transform: scale(1.3);
+}
+
+.box-form-to-modify {
+    margin: 0 auto;
+    width: 20em;
+}
+
+.box-form {
+    margin: 0 auto;
+    width: 26em;
+    padding: 3em;
+}
+
+@media (max-width: 768px) {
+    .box-form {
+        padding: .3em;
+    }
+}
+
+.form--add {
+    margin: 2em;
+}
+
+.active {
+    background-color: #8e9eab;
+}
+
+.box-table {
+    width: 90%;
+    margin: 0 auto;
+    padding: 3em 0;
+}
+
+@media (max-width: 768px) {
+    .box-table {
+        width: 100%;
+    }
+}
+
 .table-data {
     width: 100%;
     margin: 0 auto;
@@ -14,40 +185,112 @@
     empty-cells: show;
     text-align: left;
 }
+
 .table-data th {
     border: 1px solid black;
     width: 10em;
 }
+
 .table-data tr {
     border: 1px solid black;
 }
-/* .table-data tr:not(.title) {
-    display: none;
-} */
-form {
-    width: 20em;
-    margin: 2em 0;
-}
+
 label {
     display: block;
+    font-weight: 600;
 }
+
+fieldset {
+    background-color: #8e9eab;
+}
+
+@media (max-width: 768px) {
+    fieldset {
+        width: 100%;
+    }
+}
+
+legend {
+    padding: .3em;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: hsla(0, 0%, 100%, .3);
+    border: 1px solid #000;
+}
+
 textarea {
     width: 95%;
 }
+
 .title {
-    background-color: rgb(39, 39, 138);
+    background-color: rgb(35, 35, 75);
+    text-transform: uppercase;
+    letter-spacing: .1em;
     color: #FFF;
+    padding: 1.2em 0 1em 1em;
 }
+
+th {
+    padding: .4em;
+    font-weight: 600;
+}
+
+td {
+    padding: .2em;
+}
+
 .button--show-form-to-modify, .button--del-geolocation {
     float: right;
 }
+
 .popup-form {
     position: relative;
     top: 0;
 }
+
 .map {
     width: 100%;
     height: 400px;
     background-color: grey;
-    margin: 2em 0 3em 0; 
+    margin: 2em 0 3em 0;
+}
+
+.container-position--left {
+    position: relative;
+    top: 2em;
+    left: 3em;
+    width: 300px;
+}
+
+@media (max-width: 1024px) {
+    .container-position--left {
+        font-size: 1em;
+        width: 200px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container-position--left {
+        position: static;
+        font-size: .51em;
+        width: 100px;
+    }
+}
+
+.img--right:hover {
+    transform: rotate(-10deg);
+}
+
+@media (max-width: 768px) {
+    .img--right {
+        width: 100px;
+    }
+}
+
+.footer {
+    margin: 0;
+    padding: 4em;
+    width: 100%;
+    background-color: rgb(26, 26, 68);
+    color: #FFF;
 }
