--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -3,21 +3,12 @@
     margin: 0;
 }
 
-body, h1 {
+body {
     margin: 0;
     padding: 0;
     font-family: Verdana, sans-serif;
     font-size: 13px;
     line-height: 1.3;
-}
-
-.header {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: rgb(26, 26, 68);
-    color: #FFF;
-    box-shadow: inset -3px -3px 10px 0px rgb(76, 99, 134);
 }
 
 h1 {
@@ -34,23 +25,13 @@ h2 {
     padding: 2em 0 1em 0;
 }
 
-button {
-    margin: .2em 1em .2em 0;
-    padding: .8em 1.4em;
-    border: none;
-    border-radius: 2px;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: .7em;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-}
-
-button:hover {
-    box-shadow: 3px 3px 5px hsl(240, 17%, 45%);
-}
-
-.button--del-geolocation {
-    background-color: #d5b2b2;
+.header {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: rgb(26, 26, 68);
+    color: #FFF;
+    box-shadow: inset -3px -3px 10px 0px rgb(76, 99, 134);
 }
 
 .title--main {
@@ -93,6 +74,13 @@ button:hover {
     .container {
         width: 100%;
     }
+}
+
+.map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+    margin: 2em 0 3em 0;
 }
 
 .container-flex {
@@ -164,6 +152,25 @@ button:hover {
     background-color: #8e9eab;
 }
 
+button {
+    margin: .2em 1em .2em 0;
+    padding: .8em 1.4em;
+    border: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: .7em;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    box-shadow: 3px 3px 5px hsl(240, 17%, 45%);
+}
+
+.button--del-geolocation {
+    background-color: #d5b2b2;
+}
+
 .box-table {
     width: 90%;
     margin: 0 auto;
@@ -183,7 +190,7 @@ button:hover {
     border-collapse: collapse;
     border: 1px solid black;
     empty-cells: show;
-    text-align: left;
+    text-align: justify;
 }
 
 .table-data th {
@@ -227,7 +234,8 @@ textarea {
     text-transform: uppercase;
     letter-spacing: .1em;
     color: #FFF;
-    padding: 1.2em 0 1em 1em;
+    padding: 1em 0 1em 1em;
+    line-height: 2em;
 }
 
 th {
@@ -243,16 +251,12 @@ td {
     float: right;
 }
 
-.popup-form {
-    position: relative;
-    top: 0;
+textarea#location {
+    height: 60px;
 }
 
-.map {
-    width: 100%;
-    height: 400px;
-    background-color: grey;
-    margin: 2em 0 3em 0;
+textarea#description {
+    height: 120px;
 }
 
 .container-position--left {
@@ -277,6 +281,10 @@ td {
     }
 }
 
+.img--right {
+    float: right;
+}
+
 .img--right:hover {
     transform: rotate(-10deg);
 }
@@ -293,4 +301,10 @@ td {
     width: 100%;
     background-color: rgb(26, 26, 68);
     color: #FFF;
+}
+
+.red {
+    color: red;
+    font-weight: 900;
+    text-transform: capitalize;
 }
